--- a/MTA10_Server/mods/deathmatch/_ServerDeathmatch 2008.vcproj
+++ b/MTA10_Server/mods/deathmatch/_ServerDeathmatch 2008.vcproj
@@ -1448,11 +1448,23 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\Shared\logic\LuaArgument.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\Shared\logic\LuaArguments.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\Shared\logic\LuaFunctionRef.cpp"
 						>
 					</File>
 					<File
 						RelativePath="..\..\..\Shared\logic\LuaMain.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\Shared\logic\LuaManager.cpp"
 						>
 					</File>
 					<File
@@ -2441,6 +2453,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\Shared\logic\LuaArgument.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\Shared\logic\LuaArguments.h"
 						>
 					</File>
@@ -2454,6 +2470,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\Shared\logic\LuaMain.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\Shared\logic\LuaManager.h"
 						>
 					</File>
 					<File
