--- a/Projects/classes_basic/classes_basic/classes_basic.vcxproj
+++ b/Projects/classes_basic/classes_basic/classes_basic.vcxproj
@@ -60,6 +60,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Account.cpp" />
+    <ClCompile Include="AccountManager.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
