--- a/Projects/classes_basic/classes_basic/classes_basic.vcxproj.filters
+++ b/Projects/classes_basic/classes_basic/classes_basic.vcxproj.filters
@@ -2,6 +2,8 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Account.cpp" />
+    <ClCompile Include="AccountManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
