--- a/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj
+++ b/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj
@@ -67,6 +67,8 @@
       <FunctionLevelLinking>false</FunctionLevelLinking>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <FloatingPointExceptions>false</FloatingPointExceptions>
+      <CreateHotpatchableImage>false</CreateHotpatchableImage>
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)ipl_mtaconv.exe</OutputFile>
