beta3 release of model importer!

--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -1,8 +1,16 @@
 [Main]
+debug=false
 ; This is the position offset
 xOffset=0
 yOffset=0
-zOffset=1000
+zOffset=500
 mtaBLUE=true
 ; Available methods: stream, distance
-method=distance
+method=stream
+static=false
+lodSupport=true
+; Enable the cache
+cached=true
+; Memory in megabytes (cached files)
+; WARNING: Leave a big enough cache for startup texture load!
+streamerMemory=110
