--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -5,12 +5,13 @@ xOffset=0
 yOffset=0
 zOffset=500
 mtaBLUE=true
+jetpackHeight=1000
 ; Available methods: stream, distance
 method=stream
 static=false
-lodSupport=true
+lodSupport=false
 ; Enable the cache
 cached=true
 ; Memory in megabytes (cached files)
 ; WARNING: Leave a big enough cache for startup texture load!
-streamerMemory=110
+streamerMemory=100
