RC2 model importer release!

--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -1,5 +1,5 @@
 [Main]
-debug=false
+debug=true
 ; This is the position offset
 xOffset=0
 yOffset=0
@@ -9,9 +9,18 @@ jetpackHeight=1000
 ; Available methods: stream, distance
 method=stream
 static=false
+; For LOD support
 lodSupport=false
+; Disregards LOD collision to save streamer memory
+forceLODInherit=true
 ; Enable the cache
 cached=true
 ; Memory in megabytes (cached files)
 ; WARNING: Leave a big enough cache for startup texture load!
 streamerMemory=100
+
+; ----------------------- stream method vars:
+; Destroys unloaded models automatically
+autoCollect=true
+; If a model fails to laod in x frames, it marks is as dead; use 0 to disable this
+runtimeCorrection=0
