Quick bugfix for the model importer

--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -1,5 +1,5 @@
 [Main]
-debug=true
+debug=false
 ; This is the position offset
 xOffset=0
 yOffset=0
@@ -10,7 +10,7 @@ jetpackHeight=1000
 method=stream
 static=false
 ; For LOD support
-lodSupport=false
+lodSupport=true
 ; Disregards LOD collision to save streamer memory
 forceLODInherit=true
 ; Enable the cache
