added fileScanDir and stuff

--- a/lua_interpret/lua_interpret.vcproj
+++ b/lua_interpret/lua_interpret.vcproj
@@ -197,6 +197,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\luafile.h"
+				>
+			</File>
+			<File
 				RelativePath=".\StdInc.h"
 				>
 			</File>
