--- a/lua_interpret/lua_interpret.vcproj
+++ b/lua_interpret/lua_interpret.vcproj
@@ -201,6 +201,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\luafilesystem.h"
+				>
+			</File>
+			<File
 				RelativePath=".\StdInc.h"
 				>
 			</File>
@@ -211,6 +215,10 @@
 		</File>
 		<File
 			RelativePath=".\luafile.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\luafilesystem.cpp"
 			>
 		</File>
 		<File
