--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -2654,6 +2654,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\Shared\logic\LuaClass.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\Shared\logic\LuaCommon.h"
 						>
 					</File>
