--- a/MTA10_Server/mods/deathmatch/_ServerDeathmatch 2008.vcproj
+++ b/MTA10_Server/mods/deathmatch/_ServerDeathmatch 2008.vcproj
@@ -2469,6 +2469,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\Shared\logic\LuaClass.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\Shared\logic\LuaCommon.h"
 						>
 					</File>
