--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -1,16 +1,16 @@
 [Main]
-debug=true
+debug=false
 ; This is the position offset
 xOffset=0
 yOffset=0
 zOffset=500
-mtaBLUE=false
+mtaBLUE=true
 jetpackHeight=1000
 ; Available methods: stream, distance
 method=stream
 static=false
 ; For LOD support
-lodSupport=false
+lodSupport=true
 ; Disregards LOD collision to save streamer memory
 forceLODInherit=true
 ; Enable the cache
@@ -21,6 +21,6 @@ streamerMemory=512
 
 ; ----------------------- stream method vars:
 ; Destroys unloaded models automatically
-autoCollect=false
+autoCollect=true
 ; If a model fails to laod in x frames, it marks is as dead; use 0 to disable this
-runtimeCorrection=10000
+runtimeCorrection=0
