--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -957,10 +957,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\shared_logic\CEvents.cpp"
-					>
-				</File>
-				<File
 					RelativePath="..\shared_logic\CMapEvent.cpp"
 					>
 				</File>
@@ -1696,6 +1692,10 @@
 					Name="base_logic"
 					>
 					<File
+						RelativePath="..\..\..\Shared\logic\Events.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\Shared\logic\Logger.cpp"
 						>
 					</File>
@@ -1729,6 +1729,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\Shared\logic\LuaTimerManager.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\Shared\logic\RegisteredCommands.cpp"
 						>
 					</File>
 					<File
@@ -2503,10 +2507,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\shared_logic\CEvents.h"
-					>
-				</File>
-				<File
 					RelativePath="..\shared_logic\CMapEvent.h"
 					>
 				</File>
@@ -2638,6 +2638,10 @@
 					Name="base_logic"
 					>
 					<File
+						RelativePath="..\..\..\Shared\logic\Events.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\Shared\logic\include.h"
 						>
 					</File>
@@ -2683,6 +2687,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\Shared\logic\LuaTimerManager.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\Shared\logic\RegisteredCommands.h"
 						>
 					</File>
 					<File
