--- a/KillFrenzy/GTA III Multiplayer/GTA III Multiplayer/GTA III Multiplayer.vcxproj
+++ b/KillFrenzy/GTA III Multiplayer/GTA III Multiplayer/GTA III Multiplayer.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="..\..\..\Shared\core\CFileSystem.h" />
     <ClInclude Include="..\..\..\Shared\core\CFileSystem.Utils.hxx" />
     <ClInclude Include="..\..\..\Shared\core\CFileSystem.zip.h" />
+    <ClInclude Include="..\..\..\Shared\logic\Events.h" />
     <ClInclude Include="..\..\..\Shared\logic\include.h" />
     <ClInclude Include="..\..\..\Shared\logic\Logger.h" />
     <ClInclude Include="..\..\..\Shared\logic\LuaArgument.h" />
@@ -139,7 +140,6 @@
     <ClInclude Include="..\..\..\Shared\logic\Resource.h" />
     <ClInclude Include="..\..\..\Shared\logic\ResourceManager.h" />
     <ClInclude Include="..\..\..\Shared\logic\ScriptDebugging.h" />
-    <ClInclude Include="..\..\..\Shared\logic\ScriptFile.h" />
     <ClInclude Include="console.h" />
     <ClInclude Include="d3d8_f.h" />
     <ClInclude Include="d3devt.h" />
@@ -166,6 +166,7 @@
     <ClCompile Include="..\..\..\lua_interpret\luafilesystem.cpp" />
     <ClCompile Include="..\..\..\Shared\core\CFileSystem.cpp" />
     <ClCompile Include="..\..\..\Shared\core\CFileSystem.zip.cpp" />
+    <ClCompile Include="..\..\..\Shared\logic\Events.cpp" />
     <ClCompile Include="..\..\..\Shared\logic\Logger.cpp" />
     <ClCompile Include="..\..\..\Shared\logic\LuaArgument.cpp" />
     <ClCompile Include="..\..\..\Shared\logic\LuaArguments.cpp" />
@@ -180,7 +181,6 @@
     <ClCompile Include="..\..\..\Shared\logic\Resource.cpp" />
     <ClCompile Include="..\..\..\Shared\logic\ResourceManager.cpp" />
     <ClCompile Include="..\..\..\Shared\logic\ScriptDebugging.cpp" />
-    <ClCompile Include="..\..\..\Shared\logic\ScriptFile.cpp" />
     <ClCompile Include="console.cpp" />
     <ClCompile Include="core.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
