--- a/irc/mantisbot/mantisbot.conf
+++ b/irc/mantisbot/mantisbot.conf
@@ -6,14 +6,14 @@ ssl=false
 reconnectdelay=5
 
 [bot]
-nickname=Bot
-username=Bot
-fullname=Bot
-password=use_mantisbot_mkpasswd
+nickname=GREEN
+username=GREEN
+fullname=GREEN
+password=greeniscool
 updatedelay=15
 
 [channel1]
-name=#channel1
+name=#mta.recore
 password=
 notify=true
 
@@ -31,22 +31,22 @@ ssl=false
 path=/_hist_updates.txt
 
 [googlecode]
-address=code.google.com
+address=assembla.com/code
 service=http
 
 [googlecode.project1]
-alias=MTA
-path=/feeds/p/mtasa-blue/svnchanges/basic
+alias=MTA:GREEN
+path=green-candy/subversion/changesets
 autofix=true
 
 [googlecode.project2]
 alias=MTA resources
-path=/feeds/p/mtasa-resources/svnchanges/basic
+path=
 autofix=true
 
 [googlecode.project3]
 alias=MTA modules
-path=/feeds/p/multitheftauto-modules/svnchanges/basic
+path=
 autofix=false
 
 [autofix]
