Fix it, I broke it :D

--- a/Projects/classes_basic/classes_basic/classes_basic.vcxproj
+++ b/Projects/classes_basic/classes_basic/classes_basic.vcxproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
     <ClCompile Include="AccountManager.cpp" />
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
