--- a/Projects/classes_basic/classes_basic/classes_basic.vcxproj.filters
+++ b/Projects/classes_basic/classes_basic/classes_basic.vcxproj.filters
@@ -4,6 +4,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Account.cpp" />
     <ClCompile Include="AccountManager.cpp" />
+    <ClCompile Include="Client.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
