--- a/Projects/classes_basic/classes_basic/classes_basic.vcxproj
+++ b/Projects/classes_basic/classes_basic/classes_basic.vcxproj
@@ -64,9 +64,11 @@
     <ClCompile Include="AccountManager.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NewClient.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
+    <ClInclude Include="NewClient.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
