Internalized the RenderWare texture handling through CTextureManager exports; next job is Lua entity management internalization; DFF TODO

--- a/MTA10/core/_Core 2008.vcproj
+++ b/MTA10/core/_Core 2008.vcproj
@@ -1496,7 +1496,15 @@
 						>
 					</File>
 					<File
+						RelativePath="..\sdk\game\CTexDictionary.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\MTA10\sdk\game\CText.h"
+						>
+					</File>
+					<File
+						RelativePath="..\sdk\game\CTexture.h"
 						>
 					</File>
 					<File
