--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -733,6 +733,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CTexDictionarySA.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CTextSA.cpp"
 				>
 			</File>
